--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                 <img src="assets/img/footer2.png" alt="" class="footer__img2">
             </div>
 
-            <span class="footer__copy">&#169; Bedimcode. All rigths reserved</span>
+            <span class="footer__copy">&#169; Irfan. All rigths reserved</span>
         </footer>
 
         <!--=============== SCROLL UP ===============-->
